kubernetes-manifests/capacity-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capacity-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: capacity-app
  template:
    metadata:
      labels:
        app: capacity-app
    spec:
      containers:
        - name: capa-cont
          image: kimminchae/com02-spring-docker:latest
          ports:
            - containerPort: 8080
