kubernetes-manifests/sts.yaml
# statefulset
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: device-sts-test
spec:
  selector:
    matchLabels:
      app: m-sts
  serviceName: device-svc-headless
  replicas: 3
  template:
    metadata:
      labels:
        app: m-sts
    spec:
      containers:
        - name: m-app
          image: ghcr.io/c1t1d0s7/go-myweb
          ports:
            - containerPort: 80
