kubernetes-manifests/user-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deploy
spec:
  selector:
    matchLabels:
      app: user-app
  template:
    metadata:
      labels:
        app: user-app
    spec:
      containers:
      - name: user-cont
        image: shinyenggwak/onlyuser
        ports:
        - containerPort: 8080
