kubernetes-manifests/capacity-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: capacity-service
spec:
  type: ClusterIP
  selector:
    app: capacity-app
ports:
  - port: 80
  targetPort: 8080
