kubernetes-manifests/lb-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: device-service-test
spec:
  selector:
    app: m-app
  ports:
  - name: devicetest
    protocol: TCP
    port: 80
  type: LoadBalancer
