kubernetes-manifests/mysql-sts.yml
# 테스트용 stateful mysql
apiVersion: v1
kind: Service
metadata:
  name: mysql-test        # 이름이 k8s내 DNS에 등록
  labels:
    app: mysql-sts-test
spec:
  ports:
  - port: 3306
    name: mysql
  clusterIP: None     # headless Service
  selector:
    app: mysql-sts-test   # 스테이트풀셋과 연결시키는 라벨
---
## MySQL 스테이트풀셋
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: mysql-test      # 연결할 서비스의 이름 설정
  replicas: 1
  selector:
    matchLabels:
      app: mysql-sts-test
  template:
    metadata:
      labels:
        app: mysql-sts-test
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: pvc
          mountPath: /var/lib/mysql
          subPath: data
        livenessProbe:
          exec:
            command: ["mysqladmin","-p$MYSQL_ROOT_PASSWORD","ping"]
          initialDelaySeconds: 60
          timeoutSeconds: 10
  volumeClaimTemplates:
  - metadata:
      name: pvc
    spec:                   # 퍼시스턴트볼륨 요구 스펙
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi
