kubernetes-manifests/svc-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: com02-service-lb
spec:
  selector:
    app: com
  ports:
  - name: com02server
    protocol: TCP
    port: 80
  type: LoadBalancer
