kubernetes-manifests/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: com02-service
spec:
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 80
